--- a/feedback.html
+++ b/feedback.html
@@ -20,13 +20,25 @@
     <form class="z_wb_search">
 
         <div class="pull-left">
-            <span>电话</span>
-            <input class="z_input" style="width: 130px;margin-left: 5px" type="text">
+            <span class="pull-left">电话</span>
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                        <input style="width: 130px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="电话" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="pull-left" style="margin-left: 25px">
-            <span>姓名</span>
-            <input class="z_input" style="width: 97px;margin-left: 5px" type="text">
+            <span class="pull-left">姓名</span>
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                        <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="姓名" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="pull-left" style="margin-left: 25px;position: relative">
@@ -54,22 +66,45 @@
         </div>
 
         <div class="pull-left" style="margin-left: 242px">
-            <span>小区</span>
-            <input class="z_address_input" type="text">
-            <span>栋</span>
-            <input class="z_address_input" type="text">
-            <span>单元</span>
-            <input class="z_address_input" type="text">
-            <span>室</span>
-            <span style="margin-left: 20px">合同号</span>
-            <input class="z_address_input" style="width: 100px" type="text">
+            <span class="pull-left">小区</span>
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                        <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
+            <span class="pull-left" style="margin-left: 7px">栋</span>
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                        <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
+            <span class="pull-left" style="margin-left: 7px">单元</span>
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                        <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
+            <span class="pull-left" style="margin-left: 7px">室</span>
+            <span class="pull-left" style="margin-left: 20px">合同号</span>
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                        <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="z_wb_searchBox"></div>
         <div class="z_wb_refreshBox"></div>
 
     </form>
-
 
     <!--内容-->
     <div class="z_wb_content">
@@ -162,19 +197,25 @@
                         </div>
                     </div>
                 </div>
+
+
                 <!--对象-->
                 <div class="marginT15 z_object clearfix">
                     <div class="z_leftDiv pull-left">反馈对象:</div>
                     <div class="z_rightDiv pull-left">
-                        <div class="z_object_radio">
-                            <div class="z_radio z_radio_check pull-left"><div></div></div>
-                            <div class="pull-left">ECEJ</div>
-                            <div class="z_radio pull-left marginL30"><div></div></div>
-                            <div class="pull-left">新奥燃气</div>
-                            <div class="z_radio pull-left marginL30"><div></div></div>
-                            <div class="pull-left">呼叫中心</div>
+
+                        <div>
+                            <div class="layui-form-item">
+                                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                                    <input type="radio" name="sex" value="ECEJ" title="ECEJ" checked="">
+                                    <input type="radio" name="sex" value="新奥燃气" title="新奥燃气">
+                                    <input type="radio" name="sex" value="呼叫中心" title="呼叫中心">
+                                </div>
+                            </div>
                         </div>
-                        <div class="z_object_list">
+
+
+                        <div class="z_object_list" style="margin-top: 15px">
                             <div class="pull-left">
                                 <div class="layui-form-item"> 
                                     <div class="layui-input-inline input-inline1"> 
@@ -203,9 +244,16 @@
                 </div>
 
                 <!--多行输入框-->
-                <div class="z_write_textE clearfix">
-                    <div class="pull-left z_leftDiv">反馈内容:</div>
-                    <textarea class="pull-left" name="MSG" cols=40 rows=3 placeholder="请输入反馈内容!"></textarea>
+                <div class="z_write_textE clearfix" style="height: 140px">
+                    <div class="pull-left z_leftDiv">反馈详情:</div>
+                    <!--<textarea class="pull-left" name="MSG" cols=40 rows=3 placeholder="请输入反馈内容!"></textarea>-->
+                    <div >
+                        <div class="layui-form-item layui-form-text">
+                            <div class="layui-input-block" style="margin-left: 80px">
+                                <textarea placeholder="请输入内容" class="layui-textarea"></textarea>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!--有无参考的关联单据-->
