--- a/documentDetails.html
+++ b/documentDetails.html
@@ -244,7 +244,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="exampleModalLabelG">改约</h4>
       </div>
-      <div class="modal-body">
+      <div style="min-height: 200px;" class="modal-body">
 		<p>
 			<span>上班时间：</span>
 			<input type="checkbox"  />
@@ -258,14 +258,20 @@
 				 ）
 			</span>
 			<span style="color:#01AAED; cursor: pointer;">系统推荐</span>
-			<div style="width: 100%;">
-				<ul>
-					<li>
-						
-					</li>
-				</ul>
-			</div>
 		</p>
+		<div style="width: 100%; display: none;">
+			<ul style="margin-top: 16px;">
+				<li class="gaiYueBdColor">
+					<span>周五</span><br />
+					<span style="font-size: 10px;">2-11</span>
+				</li>
+				<li class="gaiYueBdColor">
+					<span>周五</span><br />
+					<span style="font-size: 10px;">2-11</span>
+				</li>
+			</ul>
+		</div>
+		
       </div>
       <div class="modal-footer">
       	<button  type="button" class="btn btn-default">取消</button>
