--- a/flow.html
+++ b/flow.html
@@ -20,92 +20,92 @@
 
          <form class="z_wb_search">
 
-             <div class="pull-left">
-                 <span class="pull-left">电话</span>
-                 <div class="clearfix z_layui_input pull-left">
-                     <div class="layui-form-item">
-                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                             <input style="width: 130px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="电话" autocomplete="off" class="layui-input">
-                         </div>
+         <div class="pull-left">
+             <span class="pull-left">电话</span>
+             <div class="clearfix z_layui_input pull-left">
+                 <div class="layui-form-item">
+                     <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                         <input style="width: 130px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="电话" autocomplete="off" class="layui-input">
                      </div>
                  </div>
              </div>
+         </div>
 
-             <div class="pull-left" style="margin-left: 25px">
-                 <span class="pull-left">姓名</span>
-                 <div class="clearfix z_layui_input pull-left">
-                     <div class="layui-form-item">
-                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                             <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="姓名" autocomplete="off" class="layui-input">
-                         </div>
+         <div class="pull-left" style="margin-left: 25px">
+             <span class="pull-left">姓名</span>
+             <div class="clearfix z_layui_input pull-left">
+                 <div class="layui-form-item">
+                     <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                         <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="姓名" autocomplete="off" class="layui-input">
                      </div>
                  </div>
              </div>
+         </div>
 
-             <div class="pull-left" style="margin-left: 25px;position: relative">
-                 <span>地址</span>
-                 <div class="layui-form-item"> 
-                     <div class="layui-input-inline"> 
-                         <select name="quiz1"> 
-                             <option value="1">请选择省</option> 
-                             <option value="2" selected="">浙江省</option> 
-                             <option value="3">江西省</option> 
-                             <option value="4">福建省</option> 
-                         </select> 
-                     </div> 
-                     <div class="layui-input-inline" style="left: 155px"> 
-                         <select name="quiz2"> 
-                             <option value="1">请选小区</option> 
-                             <option value="2">银鹭小区</option> 
-                             <option value="3" disabled="">银鹭夏鸥q</option> 
-                             <option value="4">搜索</option> 
-                             <option value="5">台州</option> 
-                             <option value="6">绍兴</option> 
-                         </select> 
-                     </div> 
-                 </div>
+         <div class="pull-left" style="margin-left: 25px;position: relative">
+             <span>地址</span>
+             <div class="layui-form-item"> 
+                 <div class="layui-input-inline"> 
+                     <select name="quiz1"> 
+                         <option value="1">请选择省</option> 
+                         <option value="2" selected="">浙江省</option> 
+                         <option value="3">江西省</option> 
+                         <option value="4">福建省</option> 
+                     </select> 
+                 </div> 
+                 <div class="layui-input-inline" style="left: 155px"> 
+                     <select name="quiz2"> 
+                         <option value="1">请选小区</option> 
+                         <option value="2">银鹭小区</option> 
+                         <option value="3" disabled="">银鹭夏鸥q</option> 
+                         <option value="4">搜索</option> 
+                         <option value="5">台州</option> 
+                         <option value="6">绍兴</option> 
+                     </select> 
+                 </div> 
              </div>
+         </div>
 
-             <div class="pull-left" style="margin-left: 242px">
-                 <span class="pull-left">小区</span>
-                 <div class="clearfix z_layui_input pull-left">
-                     <div class="layui-form-item">
-                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                             <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
-                         </div>
-                     </div>
-                 </div>
-                 <span class="pull-left" style="margin-left: 7px">栋</span>
-                 <div class="clearfix z_layui_input pull-left">
-                     <div class="layui-form-item">
-                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                             <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
-                         </div>
-                     </div>
-                 </div>
-                 <span class="pull-left" style="margin-left: 7px">单元</span>
-                 <div class="clearfix z_layui_input pull-left">
-                     <div class="layui-form-item">
-                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                             <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
-                         </div>
-                     </div>
-                 </div>
-                 <span class="pull-left" style="margin-left: 7px">室</span>
-                 <span class="pull-left" style="margin-left: 20px">合同号</span>
-                 <div class="clearfix z_layui_input pull-left">
-                     <div class="layui-form-item">
-                         <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                             <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
-                         </div>
+         <div class="pull-left" style="margin-left: 242px">
+             <span class="pull-left">小区</span>
+             <div class="clearfix z_layui_input pull-left">
+                 <div class="layui-form-item">
+                     <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                         <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
                      </div>
                  </div>
              </div>
+             <span class="pull-left" style="margin-left: 7px">栋</span>
+             <div class="clearfix z_layui_input pull-left">
+                 <div class="layui-form-item">
+                     <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                         <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                     </div>
+                 </div>
+             </div>
+             <span class="pull-left" style="margin-left: 7px">单元</span>
+             <div class="clearfix z_layui_input pull-left">
+                 <div class="layui-form-item">
+                     <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                         <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                     </div>
+                 </div>
+             </div>
+             <span class="pull-left" style="margin-left: 7px">室</span>
+             <span class="pull-left" style="margin-left: 20px">合同号</span>
+             <div class="clearfix z_layui_input pull-left">
+                 <div class="layui-form-item">
+                     <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
+                         <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                     </div>
+                 </div>
+             </div>
+         </div>
 
-             <div class="z_wb_searchBox"></div>
-             <div class="z_wb_refreshBox"></div>
+         <div class="z_wb_searchBox"></div>
+         <div class="z_wb_refreshBox"></div>
 
-         </form>
+     </form>
 
 
          <!--内容-->
@@ -230,7 +230,7 @@
 
                      <!--多行输入框-->
                      <div class="z_write_textE clearfix" style="height: 140px">
-                         <div class="pull-left z_leftDiv">反馈内容:</div>
+                         <div class="pull-left z_leftDiv">问题描述:</div>
                          <!--<textarea class="pull-left" name="MSG" cols=40 rows=3 placeholder="请输入反馈内容!"></textarea>-->
                          <div >
                              <div class="layui-form-item layui-form-text">
