--- a/myBuildBill.html
+++ b/myBuildBill.html
@@ -13,13 +13,20 @@
 </head>
 <body style="position: relative; background-color: #EAEBED;">
 
-<div class="z_main" style="padding: 10px 15px">
+<div class="z_main layui-form" style="padding: 10px 15px">
 
     <div style="background-color: white;padding: 10px">
 
         <div style="width:100%;height: 30px;line-height: 30px;padding: 0 20px;">
             <div class="pull-left">问题描述</div>
-            <input class="marginL30" type="text" style="border: 1px solid #EAEBED;float: left;width: 40%;height: 30px;border-radius: 5px;padding-left: 5px">
+            <!--<input class="marginL30" type="text" style="border: 1px solid #EAEBED;float: left;width: 40%;height: 30px;border-radius: 5px;padding-left: 5px">-->
+            <div class="clearfix z_layui_input pull-left">
+                <div class="layui-form-item">
+                    <div class="layui-input-block" style="margin-left: 29px;margin-top: 2px">
+                        <input style="width: 530px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                    </div>
+                </div>
+            </div>
             <img class="marginL30" src="img/z_wb_search.png" alt="" style="width: 25px;height: 25px;">
         </div>
 
