--- a/replyUser.html
+++ b/replyUser.html
@@ -5,7 +5,7 @@
     <title>回复用户</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/layui.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="layui/css/layui.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css" />
 
 
@@ -15,7 +15,7 @@
 </head>
 <body style="position: relative; background-color: #EAEBED;">
 
-<div class="z_main">
+<div class="z_main layui-form">
     <div class="z_rd_box">
 
         <div class="z_rd_box_top">
@@ -40,24 +40,33 @@
 
             <div class="marginT15 clearfix">
                 <span class="pull-left">回复情况填写:</span>
-                <div class="pull-left z_radio z_radio_check marginL30"><div></div></div>
-                <span class="pull-left">用户忙</span>
-                <div class="pull-left z_radio marginL30"><div></div></div>
-                <span class="pull-left">未接通</span>
-                <div class="pull-left z_radio marginL30"><div></div></div>
-                <span class="pull-left">无法联系</span>
-                <div class="pull-left z_radio marginL30"><div></div></div>
-                <span class="pull-left">空号</span>
+
+                <div class="pull-left" style="padding-left: 15px">
+                    <div class="layui-form-item">
+                        <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                            <input type="radio" name="sex" value="ECEJ" title="ECEJ" checked="">
+                            <input type="radio" name="sex" value="新奥燃气" title="新奥燃气">
+                            <input type="radio" name="sex" value="呼叫中心" title="呼叫中心">
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <textarea name="reolyUser" placeholder="请输入处理方法, 不超过200字, 不能为空!" id="" cols="30" rows="10" maxlength="200" class="z_w100textarea marginT15"></textarea>
+            <!--<textarea name="reolyUser" placeholder="请输入处理方法, 不超过200字, 不能为空!" id="" cols="30" rows="10" maxlength="200" class="z_w100textarea marginT15"></textarea>-->
+            <div >
+                <div class="layui-form-item layui-form-text">
+                    <div class="layui-input-block" style="margin-left: 0">
+                        <textarea style="resize: none" maxlength="200" placeholder="请输入内容" class="layui-textarea"></textarea>
+                    </div>
+                </div>
+            </div>
+
 
             <!--回复-->
-            <div class="marginT15 clearfix z_reply">
-                <div style="position: relative;" class="z_two_fang">
-                    <span onclick="userNotice()" class="z_two_fang_span" style="margin-top: -2px"></span>
-                    <span class="z_two_fang_span2">需要再次回复客户（ 2017-4-15 16:30，13698123511 / 金先生，解释说明计费差异原因）</span>
-                    <img  class="z_two_fang_img_e" src="img/duihao.png" />
+            <div style="margin-top:6px;" class="marginT15 clearfix z_reply">
+                <div class="z_two_fang">
+                    <input style="float: left;" type="checkbox" name="like1[write]" lay-skin="primary" >
+                    <span class="z_two_fang_span2">需要回复客户（ 2017-4-15 16:30，13698123511 / 金先生，解释说明计费差异原因）</span>
                 </div>
             </div>
 
@@ -247,8 +256,9 @@
 
 
 <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/jquery.pagination.min.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="layui/layui.js" type="text/javascript"></script>
 <script>
     $(function(){
 
@@ -281,6 +291,18 @@
             $('#userNotice').modal('hide');
         };
 
+
+    });
+
+    layui.use(['form', 'layedit', 'laydate'], function(){
+        var form = layui.form()
+                ,layer = layui.layer
+                ,layedit = layui.layedit
+                ,laydate = layui.laydate;
+
+        $('.layui-form-checkbox').eq(0).click(function(){
+            userNotice();
+        });
 
     });
 
