--- a/visiter.html
+++ b/visiter.html
@@ -10,7 +10,7 @@
 		<!--自定义样式-->
 		<link rel="stylesheet" href="css/visiter.css" />
 	</head>
-	<body style="background-color: #EAEBED;">
+	<body style="background-color: #EAEBED;" class="e_main layui-form">
 		<div class="vit_main">
 			<span class="vit_main_header_span">今日回访</span>
 			<div class="vit_main_header_span2">
@@ -147,19 +147,54 @@
 					</div>
 					<div class="vit_content_left_title">
 						<p class="vit_content_left_title_p">您一般多久购买一次燃气<span>（用户不愿意回答可以不选择）</span></p><br />
-						<label style="text-indent: 24px; color: #666666; font-weight:100;"><input style="display: inline-block;margin-right:5px;" type="radio"/>7天以内</label><br />
-						<label style="text-indent: 24px; color: #666666; font-weight:100;"><input style="display: inline-block;margin-right:5px;" type="radio"/>7-30天</label><br />
-						<label style="text-indent: 24px; color: #666666; font-weight:100; margin-bottom: 20px;"><input style="display: inline-block;margin-right:5px;" type="radio"/>31天以上</label>
+						<label style="text-indent: 24px; color: #666666; font-weight:100;">
+							<div class="layui-input-block" style="margin-left: 0;margin-top: -5px">
+								<input type="radio" name="sex1" value="7天以内" title="7天以内" checked="">
+							</div>
+						</label><br />
+						<label style="text-indent: 24px; color: #666666; font-weight:100;">
+							<div class="layui-input-block" style="margin-left: 0;margin-top: -5px">
+								<input type="radio" name="sex1" value="7-30天" title="7-30天">
+							</div>
+						</label><br />
+						<label style="text-indent: 24px; color: #666666; font-weight:100; margin-bottom: 20px;">
+							<div class="layui-input-block pull-left" style="margin-left: 0;margin-top: -5px">
+								<input type="radio" name="sex1" value="31天以上" title="31天以上">
+							</div>
+							<input placeholder="请注明" class="vit_lable_inp pull-left" style="margin-top: 6px" type="text"/>
+						</label>
 					</div>
 					<div class="vit_content_left_title">
 						<p class="vit_content_left_title_p">您一般多久购买一次燃气<span>（用户不愿意回答可以不选择）</span></p><br />
-						<label style="text-indent: 24px; color: #666666; font-weight:100;"><input style="display: inline-block;margin-right:5px;" type="radio"/>7天以内</label><br />
-						<label style="text-indent: 24px; color: #666666; font-weight:100;"><input style="display: inline-block;margin-right:5px;" type="radio"/>7-30天</label><br />
-						<label style="text-indent: 24px; color: #666666; font-weight:100; margin-bottom: 20px;"><input style="display: inline-block;margin-right:5px;" type="radio"/>31天以上<input placeholder="请注明" class="vit_lable_inp" type="text"/></label>
+						<label style="text-indent: 24px; color: #666666; font-weight:100;">
+									<div class="layui-input-block" style="margin-left: 0;margin-top: -5px">
+										<input type="radio" name="sex" value="7天以内" title="7天以内" checked="">
+									</div>
+						</label><br />
+						<label style="text-indent: 24px; color: #666666; font-weight:100;">
+							<div class="layui-input-block" style="margin-left: 0;margin-top: -5px">
+							<input type="radio" name="sex" value="7-30天" title="7-30天">
+								</div>
+						</label><br />
+						<label style="text-indent: 24px; color: #666666; font-weight:100; margin-bottom: 20px;">
+							<div class="layui-input-block pull-left" style="margin-left: 0;margin-top: -5px">
+							<input type="radio" name="sex" value="31天以上" title="31天以上">
+								</div>
+							<input placeholder="请注明" class="vit_lable_inp pull-left" style="margin-top: 6px" type="text"/>
+						</label>
 					</div>
 					<div style="border:none;" class="vit_content_left_title">
 						<p class="vit_content_left_title_p">您一般多久购买一次燃气<span>（用户不愿意回答可以不选择）</span></p><br />
-						<textarea style="width: 80%; display: inline-block;resize:none; margin-left: 24px;" placeholder="请注明" class="layui-textarea"></textarea>
+						<!--<textarea style="width: 80%; display: inline-block;resize:none; margin-left: 24px;" placeholder="请注明" class="layui-textarea"></textarea>-->
+
+						<div >
+							<div class="layui-form-item layui-form-text">
+								<div class="layui-input-block" style="margin-left: 25px">
+									<textarea style="resize: none;width: 90%" placeholder="请输入内容" class="layui-textarea"></textarea>
+								</div>
+							</div>
+						</div>
+
 					</div>
 					<span style="display: inline-block; margin-left: 48px; margin-top: 12px; margin-bottom: 12px;">感谢您的配合，有问题记得打电话哦</span>
 					<div style="display: inline-block; width: 100%; margin-bottom: 20px;">
@@ -244,12 +279,22 @@
   			<button style="display: inline-block;  margin-top: 12px;" type="button" class="btn btn-default">结束</button>
 		</div>
 	</body>
-	<script src="js/jquery-2.1.3.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
+	<script src="js/jquery.pagination.min.js" type="text/javascript"></script>
+	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="layui/layui.js" type="text/javascript"></script>
 	<script>
 		setGuanLian =function(){
 			$("#setGuanLian").modal('show');
 		};
+
+		layui.use(['form', 'layedit', 'laydate'], function(){
+			var form = layui.form()
+					,layer = layui.layer
+					,layedit = layui.layedit
+					,laydate = layui.laydate;
+
+		});
 	</script>
 </html>
 
