--- a/documentDetails.html
+++ b/documentDetails.html
@@ -211,62 +211,85 @@
   </div>
 
 <!--用于改约-->
-<div class="modal fade" id="gaiyue" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabelG">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabelG">改约</h4>
-      </div>
-      <div style="min-height: 165px;" class="modal-body layui-form">
-		<p>
-			<span>上班时间：</span>
-			<input type="checkbox" name="like1[write]" lay-skin="primary" title="夜间模式" >
-			<span> &nbsp;&nbsp;&nbsp;</span>
-			<span>
-				<span> 7月12日 </span>
-				<span> 12:10</span>
-				~
-				<span>12:40 </span>
-				 （<span>人工选择</span>
-				 ）
-			</span>
-			<span class="e_rengongxuanze" style="color:#01AAED; cursor: pointer;">人工选择</span>
-		</p>
-		<div class="rengongxuanze_time" style="width: 100%; display: none;">
-			<ul style="margin-top: 16px;">
-				<li class="gaiYueBdColor">
-					<span>周五</span><br />
-					<span style="font-size: 10px;">2-11</span>
-				</li>
-				<li class="gaiYueBdColor">
-					<span>周五</span><br />
-					<span style="font-size: 10px;">2-11</span>
-				</li>
-			</ul>
-		</div>
-		
 
-
-	
-
-		
-		<div style="float: left; margin-top: 7px; width: 80%;">
-			<span style="display: block; margin-top: 10px; float: left; line-height: 30px;">改约原因：</span>
-			
-			<input  type="radio" name="yuanyin" value="原时间不在家" title="原时间不在家" checked=""><br />
+<div id="gaiYue" style="display: none;" class="layui-form">
+	<p style="margin-left: 12px; margin-top: 18px;">
+		<span>上班时间：</span>
+		<input type="checkbox" name="like1[write]" lay-skin="primary" title="夜间模式" >
+		<span> &nbsp;&nbsp;&nbsp;</span>
+		<span>
+			<span> 7月12日 </span>
+			<span> 12:10</span>
+			~
+			<span>12:40 </span>
+			 （<span>人工选择</span>
+			 ）
+		</span>
+		<span class="e_rengongxuanze" style="color:#01AAED; cursor: pointer;">人工选择</span>
+	</p>
+	<div class="rengongxuanze_time" style="width: 590px; margin-top: 16px; margin-left: 85px; display: none;">
+		<ul class="ul_e_shijianduan" style="clear: both; width: 100%; display: inline-block;  margin-top: -2px;">
+			<li class="shijiankuaili">
+				<span class="bgFFFFFFShijianDuan sifangkuai">00:00</span>
+				<span class="ShijianDuanMan">满</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">00:30</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="bgFFFFFFShijianDuan sifangkuai">01:00</span>
+				<span class="ShijianDuanMan">满</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="bgFFFFFFShijianDuan sifangkuai">01:30</span>
+				<span class="ShijianDuanMan">满</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">02:00</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="bgFFFFFFShijianDuan sifangkuai">03:30</span>
+				<span class="ShijianDuanMan">满</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">04:00</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">04:30</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">05:00</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">05:30</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+			<li class="shijiankuaili">
+				<span class="sifangkuai">06:00</span>
+				<span class="yixuanshijianduan">已选</span>
+			</li>
+		</ul>
+	</div>
+	<div style="float: left; margin-top: 7px; margin-bottom: 20px; margin-left: 12px; width: 80%;">
+		<span style="display: block; margin-top: 10px; float: left; line-height: 30px;">改约原因：</span>
+		<input  type="radio" name="yuanyin" value="原时间不在家" title="原时间不在家" checked=""><br />
+		<div style="margin-left: 70px; position: relative;">
 			<input  type="radio" name="yuanyin" value="改约原因2" title="改约原因2"><br />
 			<input  type="radio" name="yuanyin" value="其他" title="其他">
-			<input style="display:inline-block;width: 60%; height: 30px;" type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入改约原因" class="layui-input">
+			<input style="display:block; position:absolute; height:30px; left:70px; top:51px;width: 60%;  " type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入改约原因" class="layui-input">
 		</div>
-      </div>
-      <div class="modal-footer">
-      	<button  type="button" class="btn btn-default">取消</button>
-        <button type="button" class="btn btn-primary">确定</button>
-      </div>
-    </div>
+	</div>
   </div>
-</div>
+
 	</body>
 	<script type="text/javascript" src="js/jquery-2.1.3.min.js" ></script>
 	<script src="layer-v3.0.3/layer/layer.js"></script>
@@ -291,7 +314,11 @@
 			};
 			//改约
 			gaiYue = function(){
-				$('#gaiyue').modal('show');
+				$.layer.openContent($("#gaiYue"),"改约",{"area":['700px','320px'],btn:["确定","取消"],
+					yes:function(index, layero){
+						alert("我是确认按钮");
+					}
+		   		});
 			};
 			
 			//是否选择人工选择
@@ -303,6 +330,44 @@
 					$('.e_rengongxuanze').text('人工选择');
 					$('.rengongxuanze_time').hide();
 				}
+			});
+			
+
+			//模拟动态生成获取的天数 25代表获取的总天数
+			var rowNum = Math.floor(25/7);//获取要生成的ul数
+			var mainNum = 25%7;//获取最后一个剩余的天数
+			for(var i = 1; i <= rowNum; i++){
+				var table = "<ul   style='width: 100%;  display: inline-block;'>";
+				if(i == rowNum){
+					for(var j = 0; j<mainNum ;j++){
+						table += "<li  class='gaiYueBdColor'><span>周三</span><br /><span style='font-size: 10px;'>4-25</span></li>";
+					}
+				}else{
+					for(var j = 0; j<7 ;j++){
+						table += "<li  class='gaiYueBdColor'><span>周四</span><br /><span style='font-size: 10px;'>4-25</span></li>";
+					}
+				}
+				
+				table +="</ul>";
+				$('.rengongxuanze_time').prepend(table);
+			}
+			
+			//选择预约的具体时间（那个时间段）
+			$('.sifangkuai').on('click',function(){
+				$('.yixuanshijianduan').hide();
+				$(this).siblings().show();
+				
+			});
+			
+			//选择预约的具体时间(那一天)
+			$('body').on('click','.gaiYueBdColor',function(){
+				$('.gaiYueBdColor').removeClass('bgFFFFFF');
+				$(this).addClass('bgFFFFFF');
+				var table = "<div><ul  style='width: 100%; display: inline-block;'>"+$(this).parent().html()+"</ul></div>";
+				console.log(table);
+				$('.ul_e_shijianduan').before(table);
+				$(this).parent().remove();
+
 			});
 			
 		});
